--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: node_js
+
 node_js:
- - "0.10"
+  - "0.10"
 
 env:
  global:
@@ -10,5 +11,8 @@ branches:
  only:
   - master
 
+install:
+  - ./script/bootstrap.sh
+
 script:
- - ./travis.sh
+  - ./script/travis.sh
