--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,7 @@
     "tests"
   ],
   "devDependencies": {
-    "wet-boew": "https://github.com/wet-boew/wet-boew/tarball/v4.0"
+    "wet-boew": "https://github.com/wet-boew/wet-boew/tarball/master"
   },
   "resolutions": {
     "jquery": "~2.1.0"
