--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "grunt-contrib-cssmin": "^0.9.0",
     "grunt-gh-pages": "^0.9.1",
     "grunt-hub": "^0.6.2",
-    "grunt-install-dependencies": "^0.1.0"
+    "grunt-install-dependencies": "^0.1.0",
+    "grunt-sass": "~0.14.0",
+    "grunt-contrib-csslint": "~0.2.0",
+    "grunt-autoprefixer": "~0.8.1"
   }
 }
