--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,7 @@
     "tests"
   ],
   "devDependencies": {
-    "wet-boew": "https://github.com/wet-boew/wet-boew/tarball/master"
+    "wet-boew": "https://github.com/wet-boew/wet-boew.git#master"
   },
   "main": "index.html"
 }
