--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "bower update && grunt init"
+    "postinstall": "bower update"
   },
   "repository": {
     "type": "git",
