--- a/package.json
+++ b/package.json
@@ -20,15 +20,16 @@
   "devDependencies": {
     "assemble": "^0.4.36",
     "grunt": "^0.4.2",
+    "grunt-autoprefixer": "~0.8.1",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-connect": "^0.7.1",
     "grunt-contrib-copy": "^0.5.0",
+    "grunt-contrib-csslint": "~0.2.0",
     "grunt-contrib-cssmin": "^0.9.0",
     "grunt-gh-pages": "^0.9.1",
     "grunt-hub": "^0.6.2",
     "grunt-install-dependencies": "^0.1.0",
     "grunt-sass": "~0.14.0",
-    "grunt-contrib-csslint": "~0.2.0",
-    "grunt-autoprefixer": "~0.8.1"
+    "time-grunt": "^1.0.0"
   }
 }
