--- a/package.json
+++ b/package.json
@@ -18,18 +18,26 @@
   },
   "homepage": "https://github.com/wet-boew/wet-boew-styleguide",
   "devDependencies": {
-    "assemble": "~0.4.36",
-    "grunt": "~0.4.2",
-    "grunt-autoprefixer": "~0.8.1",
+    "assemble": "~0.4.12",
+    "grunt": "~0.4.5",
+    "grunt-autoprefixer": "^1.0.1",
+    "grunt-banner": "^0.3.1",
     "grunt-contrib-clean": "~0.6.0",
+    "grunt-contrib-concat": "~0.5.0",
     "grunt-contrib-connect": "~0.8.0",
-    "grunt-contrib-copy": "^0.5.0",
-    "grunt-contrib-csslint": "~0.2.0",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-csslint": "~0.4.0",
     "grunt-contrib-cssmin": "^0.9.0",
-    "grunt-gh-pages": "^0.9.1",
+    "grunt-contrib-htmlmin": "^0.4.0",
+    "grunt-contrib-imagemin": "~0.9.2",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-uglify": "~0.5.1",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-gh-pages": "~0.9.0",
+    "grunt-html": "^1.6.0",
     "grunt-hub": "~0.7.0",
     "grunt-install-dependencies": "^0.2.0",
-    "grunt-sass": "~0.14.0",
+    "grunt-sass": "^0.14.1",
     "time-grunt": "^1.0.0"
   }
 }
