--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ branches:
  only:
   - master
 
+before_install:
+  - echo "machine github.com login $GH_TOKEN" >> ~/.netrc
+
 install:
   - ./script/bootstrap.sh
 
