--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   "homepage": "https://github.com/wet-boew/wet-boew-styleguide",
   "devDependencies": {
     "assemble": "~0.4.36",
+    "autoprefixer": "^8.5.0",
     "grunt": "~0.4.2",
-    "grunt-autoprefixer": "~0.8.1",
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-connect": "~0.8.0",
     "grunt-contrib-copy": "^0.5.0",
@@ -29,6 +29,7 @@
     "grunt-gh-pages": "^2.0.0",
     "grunt-hub": "~0.7.0",
     "grunt-install-dependencies": "^0.2.0",
+    "grunt-postcss": "^0.9.0",
     "grunt-sass": "^2.1.0",
     "time-grunt": "^1.0.0"
   }
