--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "grunt-install-dependencies": "^0.2.0",
     "grunt-postcss": "^0.9.0",
     "grunt-sass": "^2.1.0",
+    "load-grunt-tasks": "^4.0.0",
     "time-grunt": "^1.0.0"
   }
 }
