--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "autoprefixer": "^8.5.0",
     "grunt": "~0.4.2",
     "grunt-assemble": "^0.6.3",
-    "grunt-contrib-clean": "~0.6.0",
+    "grunt-contrib-clean": "^1.1.0",
     "grunt-contrib-connect": "~0.8.0",
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-csslint": "~0.2.0",
