Provide Access To Accessibility Guide

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 title_en: "Web Experience Toolkit (WET)"
 title_fr: "Boîte à outils de l'expérience Web (BOEW)"
 title_accessibility_en: Accessibility Guide
-title_accessibility_en: Accessibility Guide
+title_accessibility_fr: Accessibility Guide
 title_design_en: Design Guide
 title_design_fr: Guide de conception
 title_writing_en: Writing Guide
